# slack-web

./: LICENSE.md  slack-web.cabal  stack.yaml
src/Web/: Slack.hs
src/Web/Slack/: Conversation.hs
