name: slack-web
version: 0.2.0.11

build-type: Simple
cabal-version: 1.20

license: MIT
license-file: LICENSE.md

copyright: 2020 Martin Toman
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer: Martin Toman <whomenope@outlook.com>

homepage: https://github.com/WhoMeNope/slack-web
bug-reports: https://github.com/WhoMeNope/slack-web/issues

synopsis: Bindings for the Slack web API
description: Haskell bindings for the Slack web API.

category: Web

tested-with: GHC == 8.4.4

extra-source-files:
  README.md


library
  hs-source-dirs:
      src
  exposed-modules:
      Web.Slack
      Web.Slack.Api
      Web.Slack.Auth
      Web.Slack.Chat
      Web.Slack.Common
      Web.Slack.MessageParser
      Web.Slack.User
      Web.Slack.Conversation
  other-modules:
      Web.Slack.Types
      Web.Slack.Util
  build-depends:
      aeson >= 1.0 && < 1.5
    , base >= 4.11 && < 4.13
    , containers
    , http-api-data >= 0.3 && < 0.5
    , http-client >= 0.5 && < 0.7
    , http-client-tls >= 0.3 && < 0.4
    , servant >= 0.12 && < 0.17
    , servant-client >= 0.12 && < 0.17
    , servant-client-core >= 0.12 && < 0.17
    , text >= 1.2 && < 1.3
    , transformers
    , mtl
    , time
    , errors
    , megaparsec >= 5.0 && < 7.1
  default-language:
      Haskell2010
  ghc-options:
      -Wall

-- the test suite doesn't depend on slack-web
-- but rather has the src as an extra source directory.
-- that allows us to refer to non exported modules from tests.
test-suite tests
  main-is:
      Spec.hs
  hs-source-dirs:
      src, tests
  type:
      exitcode-stdio-1.0
  other-modules:
      Web.Slack.MessageParser
      Web.Slack.MessageParserSpec
      Web.Slack.Types
  build-depends:
      base >= 4.11 && < 4.13
    , containers
    , aeson
    , errors
    , hspec
    , http-api-data
    , text
    , time
    , megaparsec >= 5.0 && < 7.1
  default-language:
    Haskell2010
  ghc-options:
       -Wall

source-repository head
  type: git
  location: https://github.com/WhoMeNope/slack-web
